# CampusVista

./: .gitignore  LICENSE  README.md  Run CampusVista.command
.github/workflows/: ci.yml
android-app/: gradle.properties  keystore.properties.example  settings.gradle
android-app/app/: build.gradle
docs/: architecture.md  data_collection_plan.md  database_schema.md  decision_log.md  ml_model_upgrade.md  play_store_readiness.md  privacy_policy.md  professor_explanation.md  project_plan_and_progress.md  project_scope.md  recognition_implementation.md  recognition_plan.md  routing_logic.md  search_logic.md  team_division.md
python-backend/: README.md  requirements.txt
python-backend/app/: __init__.py  db.py  main.py  models.py
python-backend/app/routes/: __init__.py  api.py  checkpoint_routes.py  recognition_routes.py  route_routes.py  search_routes.py
python-backend/tests/: test_backend_services.py
python-common/: pyproject.toml
python-common/campusvista_recognition/: __init__.py  encoders.py  features.py
python-tools/: config.json  requirements.txt
python-tools/data/raw/: edges.csv  (+6 more)
python-tools/scripts/: benchmark_recognition.py  build_graph.py  build_recognition_index.py  campusvista_data.py  clean_raw_data.py  export_openclip_mobile.py  export_tflite_model.py  generate_seed_db.py  train_recognition_model.py  validate_checkpoints.py  validate_crowd_rules.py  validate_edges.py  validate_map_scale.py  validate_panos.py  validate_recognition_labels.py  validate_search_aliases.py
python-tools/tests/: test_data_pipeline.py
scripts/: run_campusvista.sh
(+141 files in other folders)
